Added enable/disable for bucket spinner buttons
Build a fraction tab: Added bucket spinner buttons
# 0.00.80 (64782) Jun 7, 2012
Fraction Matcher: Fixed stroke width for compound pattern shapes (for fraction > 1)
# 0.00.79 (64772) Jun 7, 2012
Started on "pictures" scene
Removed package buildafraction_functional
Added scene layer for navigation
Build a fraction tab: Added radio buttons for changing game types, not wired up yet
# 0.00.78 (64716) Jun 6, 2012
Matching Game Tab: Performance improvements for fraction representations flying back to their containers or to the match containers
# 0.00.77 (64713) Jun 6, 2012
Added reset all button
Randomized level 0
Added fractions >1
Fixed: number should become pickable after splitting a fraction
Animate new fractions
Wired up "split fraction" button
Numbers go back to their starting location when dropped in the toolbox or in an empty region of the play area
Added multiple levels
Added ability to go to next level after one complete
If all targets filled up, then add a "next" button
Fixed: Multiple score cells light up when one match is made
Removed split button and interactivity when fraction entered into scoring cell
Drag fraction after assembly
Animate stroke on score box when a match is made
Center "my fractions" text above the target boxes
Only collect a fraction if the value is correct
# 0.00.76 (64594) Jun 1, 2012
Fixed: Tetris "L" shapes are off by a factor of 2 for equality tests
Increased bar animation time by 25% (from 0.3 sec to 0.375 sec)
# 0.00.75 (64581) Jun 1, 2012
Improved performance when animating bar chart bars even further
# 0.00.74 (64576) Jun 1, 2012
Improved performance when animating bar chart bars
# 0.00.73 (64573) Jun 1, 2012
Renamed "Fraction Matching Game" to "Fraction Matcher"
Added new sim for "Fraction Matching Game"
# 0.00.72 (64542) May 31, 2012
Build a fraction tab: Block against unnecessary repainting for target cell highlighting